--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
   --accent-color: #3f83f8;
   --text-color: #333333;
   --link-color: #2563eb;
-  --background-color: #ffffff;
+  --background-color: #000;
   --light-gray: #f0f0f0;
   --gray: #808080;
   --dark-gray: #555;
+
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -16,258 +18,730 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  line-height: 1.6;
   background-color: var(--background-color);
-  color: #333;
+  color: #FFF;
 }
 
-nav{
+nav {
   height: 5rem;
+  width: 100%;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  border: 0.5px solid #ccc;
-  background-color: var(--light-gray);
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #FFF;
+  box-shadow: 0px 1px 5px rgba(255, 255, 255, 0.35);
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
-.logo{
+
+#bar,
+#back {
+  display: none;
+}
+
+.logo {
   font-size: 2rem;
   font-weight: bold;
   padding: 1rem;
-  color: var(--text-color);
+  color: #FFF;
 }
-.logo::first-letter{
-  color: #ff6347;
-}
-.surname::first-letter{
-  color: #ff6347;
-}
+
 .abtSection ul {
   list-style: none;
   display: flex;
   flex-direction: row;
   gap: 1.15rem;
 }
+
 .abtSection ul li a {
   text-decoration: none;
   padding: 0.5rem;
   font-size: 1.25rem;
-  color: var(--text-color);
+  color: #FFF;
   font-weight: normal;
-  opacity: 0.8;
+  position: relative;
 }
-.abtSection ul li a:hover {
-  opacity: 1;
+
+.abtSection ul li a::after {
+  content: "";
+  width: 0;
+  height: 2.5px;
+  background-color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  transition: 0.5s;
+  border-radius: 1rem;
 }
-.container{
-  background-color: var(--light-gray);
-  color: var(--text-color);
-  height: 90vh;
-  display: flex;
+
+.abtSection ul li a:hover::after {
+  width: 100%;
 }
-.main:hover{
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.65);
-}
-.main{
+
+.container {
   background-color: var(--background-color);
-  color: var(--background-color);
-  background-image: url('./bgImg2.png');
-  background-position: center;
-  height: 80%;
-  width: 90%;
-  margin: auto;
-  padding: 4rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: box-shadow 0.3s ease-in-out 0.1s
-}
-.myInfo{
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-.btn{
-  font-size: 1rem;
-  width: 6rem;
-  background: #b0b0f5;
-  background: radial-gradient(circle, rgba(176, 176, 245, 1) 0%, rgba(9, 30, 121, 1) 0%, rgba(0, 212, 255, 1) 100%);
-  color: var(--background-color);
-  padding: 1rem;
-  border: none;
-  border-radius: 2rem;
-}
-.groupBtn{
-  display: flex;
-  gap: 1rem;
-  justify-content: flex-start;
-}
-.myImage img{
-  width: 25rem;
-  height: 25rem;
-  border-radius: 50%;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.65);
-}
-.myImage{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.myName{
-  font-size: 2rem;
-  font-weight: bold;
-}
-.myInfo h3{
-  font-size: 1.5rem;
-}
-.abtMe{
+  color: #FFF;
   height: 80vh;
-  background-color: var(--background-color);
+  display: flex;
+}
+
+.main:hover {
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.45);
+}
+
+.main {
+  color: #FFF;
+  background-position: center;
+  height: 90%;
+  width: 80%;
+  margin: 5rem auto;
   padding: 10rem;
   display: flex;
-  justify-content: space-around;
-  gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.25);
+  transition: box-shadow 0.3s ease-in-out 0.3s;
+  /* animation: 3s slidefromleft ease-in-out forwards; */
+  /* clip-path: polygon(100% 0%, 100% 75%, 50% 100%, 0% 75%, 0 0); */
 }
-.heading {
-  width: 50%;
-  font-size: 1rem;
-  color: var(--text-color);
+
+.btns button {
+  height: 50px;
+  width: 100px;
+  border-radius: 10px;
+  background-color: #000;
+  color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  border: 0.1px solid var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  font-size: 13px;
+  padding: 5px;
 }
-.mySkills h3{
-  font-size: 1.5rem;
-  text-decoration: 2px underline #ff6347;
+.btns{
+  display: flex;
+  gap: 15px;
 }
-.projects{
-  height: 90vh;
-  background-color: var(--light-gray);
+
+.btns button:hover {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid white;
 }
-.projectInfo{
-  padding: 5rem;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-.card{
-  border: 0.1px solid var(--background-color);
-  background-color: var(--background-color);
-  border-radius: 1rem;
-  width: 90%;
+
+.myInfo {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
-}
-.card:hover{
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.85);
-  opacity: 0.85;
-}
-.cardImg1{
-  background-image: url('./stayNest.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 200px;
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  display: flex;
-  justify-content: center;
   align-items: center;
-}
-.cardImg2{
-  background-image: url('./resumeBuilder.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 200px;
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  display: flex;
   justify-content: center;
-  align-items: center;
+  width: 45%;
+  gap: 1.25rem;
 }
-.cardImg3{
- background-image: url('./simonsays.webp');
-  background-size: contain;
-  background-position: center;
-  height: 200px;
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.myImage img {
+  width: 22rem;
+  height: 22rem;
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.25);
 }
-.cardInfo{
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.projectHeading{
-  color: var(--text-color);
-  margin-left: 2rem;
+
+.myImage {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.contactSection{
-  height: 70vh;
+.myName {
+  font-size: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes slidefromleft {
+  0% {
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 100;
+  }
+}
+
+.myName p {
+  font-size: 1.15rem;
+}
+
+.abtMe {
+  height: 100vh;
+  background-color: var(--background-color);
+  padding: 10rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 15rem;
+}
+
+.imgSection {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imgSection img {
+  height: 100%;
+  border-radius: 1rem;
+}
+
+.infoSection {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.tab-titles {
+  display: flex;
+  gap: 3rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.tabLinks {
+  cursor: pointer;
+  position: relative;
+}
+
+.tabLinks::after {
+  content: "";
+  width: 0;
+  height: 2.5px;
+  background-color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  transition: 0.5s;
+}
+
+.tabLinks.activeLink::after {
+  width: 50%;
+}
+
+.tabContents ul li {
+  list-style: none;
+  font-size: 1rem;
+  margin: 1rem 0;
+}
+
+.tabContents {
+  display: none;
+}
+
+.tabContents.activeTab {
+  display: block;
+}
+
+.tabContents span {
+  color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+}
+
+.projects {
+  height: fit-content;
   background-color: var(--background-color);
 }
-.contactContainer{
+
+.projectInfo {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0 8rem;
+  margin: 4rem 1rem;
+  gap: 1rem;
+}
+
+.card {
+  border: 0.1px solid var(--background-color);
+  background-color: #fff;
+  color: var(--background-color);
+  border-radius: 1rem;
+  width: 95%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  box-shadow: 0px 1px 10px rgba(255, 255, 255, 0.55);
+}
+
+.card:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  transform: translateY(-15px);
+}
+
+.icons {
+  margin-top: 0.5rem;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.icons i {
+  font-size: 1.75rem;
+  color: #000;
+}
+
+.icons i:hover {
+  color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  transition: 0.2s;
+}
+
+.cardImg1 {
+  background-image: url('./stayNest.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImg2 {
+  background-image: url('./resumeBuilder.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImg3 {
+  background-image: url('./simonsays.webp');
+  background-size: contain;
+  background-position: center;
+  height: 300px;
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImg4 {
+  background-image: url('./images.png');
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+
+.cardInfo {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.projectHeading {
+  color: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactSection {
+  height: 60vh;
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.contactContainer {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
 }
-.connect{
+
+.connect {
   width: 35%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   padding: 3rem;
 }
-.socials{
+
+.socials {
   display: flex;
-  gap: 1.5rem;  
+  gap: 1.5rem;
 }
-.socials i:hover{
-  opacity: 1;
+
+.socials a {
+  text-decoration: none;
+  color: #fff;
 }
-.socials i{
+
+.socials i:hover {
+  transition: 0.3s;
+  transform: translateY(-5px);
+}
+
+.socials i {
   font-size: 3rem;
-  color: var(--text-color);
-  opacity: 0.9;
 }
-.msg{
+
+.msg {
   display: flex;
   flex-direction: column;
   gap: rem;
   justify-content: flex-end;
-   padding: 2rem;
+  padding: 2rem;
 }
-.common input, textarea{
+
+.common input,
+textarea {
   padding: 1rem;
   width: 50rem;
   border: none;
   border-radius: 0.5rem;
-  background-color: var(--light-gray);
-  color: var(--text-color);
+  background-color: #fff;
+  border: 0.1px solid #fff;
 }
-.common label{
+
+.common label {
   font-size: 1rem;
-  color: var(--text-color);
+  color: #FFF;
   font-weight: bold;
 }
-.footer{
+
+.submitForm {
+  margin-top: 1.5rem;
+  height: 2.95rem;
+  width: 6rem;
+  padding: 0.5rem;
+  border: 0.1px solid var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  ;
+  border-radius: 0.5rem;
+  background-color: var(--background-color);
+  color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+  ;
+  font-size: 1.15rem;
+}
+
+.submitForm:hover {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid white;
+}
+
+.footer {
   height: 20vh;
-  background-color: var(--light-gray);
+  background-color: var(--background-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
   padding: 1rem;
+  box-shadow: 0px 1px 8px rgba(255, 255, 255, 0.35);
+}
+
+.common label{
+  font-weight: 500;
+}
+
+#flash-message{
+  color: green;
+  display: none;
+}
+
+
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Small Screens xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+@media (max-width : 600px) {
+  .logo {
+    font-size: 1.25rem;
+  }
+
+  .abtSection {
+    padding: 15px;
+    background-color: var(--muidocs-palette-primary-300, hsl(210, 100%, 70%));
+    position: fixed;
+    right: -250px;
+    top: 0;
+    height: 100%;
+    width: 45%;
+    font-size: 1rem;
+    box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.85);
+    transition: right 0.5s;
+  }
+
+  .abtSection ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .abtSection ul li i {
+    font-size: 1rem;
+    opacity: 0.65;
+  }
+
+  .abtSection ul li i:hover {
+    opacity: 1;
+  }
+
+  #bar {
+    display: block;
+    margin-right: 10px;
+    font-size: 1.5rem;
+    opacity: 1;
+  }
+
+  #bar:hover {
+    opacity: 0.75;
+  }
+
+  #back {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-between;
+  }
+
+  .container {
+    height: 400px;
+    width: 100%;
+    padding: 15px;
+    margin: 0;
+  }
+
+  .main {
+    height: 90%;
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+  .myInfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  .myInfo h2{
+    font-size: 1.15rem;
+    padding: 0;
+  }
+   .myInfo h5{
+    font-size: 0.75rem;
+    padding: 0;
+  }
+   .myInfo h4{
+    font-size: 1rem;
+    padding: 0;
+  }
+  .myImage img {
+    display: none;
+  }
+
+  .myName {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .abtMe {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin-bottom: 5rem;
+    gap: 1.5rem;
+  }
+
+  .imgSection {
+    height: 55%;
+    width: 100%;
+    padding: 0;
+    border-top: 0.1px solid rgba(255, 255, 255, 0.15);
+  }
+
+  .imgSection img {
+    height: 80%;
+  }
+
+  .infoSection {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .infoHeading {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.75rem;
+  }
+
+  .tab-titles {
+    display: flex;
+    font-size: 0.8rem;
+    gap: 1rem;
+  }
+
+  .tabContents ul li {
+    font-size: 0.75rem;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.15);
+  }
+
+  .projectHeading {
+    font-size: 0.85rem;
+    margin-top: 10px;
+  }
+
+  .projectInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    margin-top: 5px;
+  }
+
+  .card {
+    width: 95%;
+    font-size: 0.65rem;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+
+  .cardImg1,
+  .cardImg2,
+  .cardImg3,
+  .cardImg4 {
+    height: 135px;
+  }
+
+  .contactSection {
+    height: 100%;
+    width: 100%;
+  }
+
+  .contactContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    gap: 0;
+    box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.15);
+  }
+
+  .connect {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 0.75rem;
+    padding: 15px;
+  }
+
+  .socials {
+    gap: 1rem;
+  }
+
+  .socials a i {
+    font-size: 2.5rem;
+  }
+
+  .msg {
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 15px;
+  }
+
+  .common label {
+    font-size: 0.85rem;
+  }
+
+  .common input {
+    height: 30px;
+    width: 100%;
+  }
+
+  .common textarea {
+    height: 50px;
+    width: 100%;
+  }
+
+  .submitForm {
+    height: 35x;
+    width: 80px;
+    font-size: 0.85rem;
+    padding: 1rem;
+  }
+
+  .footer {
+    height: 80px;
+  }
+
+  .footer p {
+    font-size: 0.85rem;
+  }
+
+  .abtSection ul li a {
+    text-decoration: none;
+    padding: 0.5rem;
+    color: #FFF;
+    font-weight: normal;
+    position: relative;
+    font-size: 1rem;
+  }
+
+  .abtSection ul li a::after {
+    content: "";
+    background-color: #0B192C;
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+  }
+
+  .abtSection ul li a:hover::after {
+    width: 50%;
+  }
 }
