--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ nav {
   font-size: 13px;
   padding: 5px;
 }
-.btns{
+
+.btns {
   display: flex;
   gap: 15px;
 }
@@ -465,11 +466,11 @@ textarea {
   box-shadow: 0px 1px 8px rgba(255, 255, 255, 0.35);
 }
 
-.common label{
+.common label {
   font-weight: 500;
 }
 
-#flash-message{
+#flash-message {
   color: green;
   display: none;
 }
@@ -515,14 +516,19 @@ textarea {
     margin-right: 10px;
     font-size: 1.5rem;
     opacity: 1;
+    cursor: pointer;
+    transition: transform 0.3s ease;
   }
 
   #bar:hover {
     opacity: 0.75;
+    transform: rotate(180deg) scale(1.2);
   }
 
   #back {
     display: block;
+    cursor: pointer;
+    font-size: 1.25rem;
   }
 
   nav {
@@ -555,18 +561,20 @@ textarea {
     margin: 0;
   }
 
-  .myInfo h2{
-    font-size: 1.15rem;
+  .myInfo h2 {
+    font-size: 14.5px;
+  }
+
+  .myInfo h5 {
+    font-size: 12px;
     padding: 0;
   }
-   .myInfo h5{
-    font-size: 0.75rem;
+
+  .myInfo h4 {
+    font-size: 12px;
     padding: 0;
   }
-   .myInfo h4{
-    font-size: 1rem;
-    padding: 0;
-  }
+
   .myImage img {
     display: none;
   }
@@ -574,6 +582,7 @@ textarea {
   .myName {
     display: flex;
     flex-direction: column;
+    gap: 11px;
     padding: 0;
   }
 
@@ -581,7 +590,7 @@ textarea {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    margin-bottom: 5rem;
+    margin-bottom: 7rem;
     gap: 1.5rem;
   }
 
@@ -623,6 +632,7 @@ textarea {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.15);
+    margin-top: 2rem;
   }
 
   .projectHeading {
