--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ nav {
 }
 
 .cardImg2 {
-  background-image: url('./resumeBuilder.jpg');
+  background-image: url('./Streamify.png');
   background-size: cover;
   background-position: center;
   height: 300px;
